# restriction-enzyme

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt
data/: sequence.fasta
src/restriction_enzyme/: classes.py
tests/: test_dna.py  test_fasta.py  test_restrictionenzyme.py
