[project]
name = "restriction_enzyme"
version = "0.1.0"
description = ""
authors = [
    {name = "Mehmet Can Ay", email = "s88may@uni-bonn.de"},
]
dependencies = [
    "pandas>=2.1.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
